# Buffalo

./: Buffalo.kdev4  CMakeLists.txt  org.kde.buffalo.desktop  org.kde.buffalo.json  org.kde.buffalo.metainfo.xml
src/: CMakeLists.txt  main.cpp
src/contents/ui/: main.qml
